--- a/main-page.html
+++ b/main-page.html
@@ -10,6 +10,16 @@
 
 		<title>Hello, world!</title>
 	</head>
+	<div class="card">
+		<div class="card-body">
+			Title.
+		</div>
+		<ul class="list-group list-group-horizontal">
+			<li class="list-group-item">Cras justo odio</li>
+			<li class="list-group-item">Dapibus ac facilisis in</li>
+			<li class="list-group-item">Morbi leo risus</li>
+		</ul>
+	</div>
 	<body>
 		<h1>Hello, world!</h1>
 
