--- a/main-page.html
+++ b/main-page.html
@@ -9,11 +9,15 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 		<title>Hello, world!</title>
-	</head>
-	<div class="card">
-		<div class="card-body">
-			Title.
+		<div class="jumbotron">
+			<h1 class="display-4">Hello, world!</h1>
+			<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+			<hr class="my-4">
+			<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+			<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
 		</div>
+	</head>
+		<div>
 		<ul class="list-group list-group-horizontal">
 			<li class="list-group-item">Cras justo odio</li>
 			<li class="list-group-item">Dapibus ac facilisis in</li>
@@ -21,6 +25,14 @@
 		</ul>
 	</div>
 	<body>
+		<div class="media">
+			<img src="..." class="align-self-center mr-3" alt="...">
+			<div class="media-body">
+				<h5 class="mt-0">Center-aligned media</h5>
+				<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+				<p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+			</div>
+		</div>
 		<h1>Hello, world!</h1>
 
 		<!-- Optional JavaScript -->
