added ipsum to p tag

--- a/main-page.html
+++ b/main-page.html
@@ -29,8 +29,10 @@
 			<img src="..." class="align-self-center mr-3" alt="...">
 			<div class="media-body">
 				<h5 class="mt-0">Center-aligned media</h5>
-				<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-				<p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+				<p>Kickstarter occupy bicycle rights chambray mustache synth cornhole craft beer pug hella retro. Twee kogi microdosing offal four loko vexillologist plaid typewriter vegan. Gochujang mumblecore put a bird on it humblebrag hell of stumptown retro lumbersexual literally everyday carry. Occupy next level pinterest raw denim, meggings brunch pork belly wayfarers marfa activated charcoal.
+
+				</p>
+				<p class="mt-0">Single-origin coffee 8-bit direct trade tattooed succulents selvage. Shoreditch woke narwhal cronut deep v, gochujang vinyl. Knausgaard skateboard vaporware, pug chartreuse coloring book woke. Edison bulb 90's green juice, PBR&B banh mi migas squid craft beer poutine dreamcatcher taxidermy. Irony beard green juice fam pop-up umami before they sold out viral farm-to-table plaid ennui.</p>
 			</div>
 		</div>
 		<h1>Hello, world!</h1>
