adding padding to fill murray

--- a/index.html
+++ b/index.html
@@ -77,10 +77,15 @@
 		</section>
 
 		<!--adding content section-->
-		<section>
+		<section class="bg-secondary text-white py-5">
 			<div class="container">
 				<div class="row">
-
+					<div class="col-12">
+						<img src="https://www.fillmurray.com/300/300" alt="fill murray" class="float-lg-left pr-lg-5">
+						<p>
+							Cred next level subway tile tattooed pitchfork retro skateboard. Cardigan pop-up crucifix prism. Shoreditch yr narwhal ethical polaroid health goth taxidermy prism sriracha ugh try-hard edison bulb meditation mixtape farm-to-table. Waistcoat before they sold out yr wolf lyft paleo skateboard locavore try-hard meh. Cred gentrify microdosing tilde ugh succulents chambray viral health goth williamsburg jianbing. Vexillologist biodiesel meh tousled iceland.
+						</p>
+					</div>
 				</div>
 			</div>
 		</section>
