--- a/index.html
+++ b/index.html
@@ -94,13 +94,17 @@
 		<section>
 			<div class="container">
 				<div class="row">
+					<div class="col-lg"></div>
+					<div class="col-lg"></div>
+					<div class="col-lg"></div>
+					<div class="col-lg"></div>
 
 				</div>
 			</div>
 		</section>
 
 		<!--adding footer sectionb-->
-		<footer>
+		<footer class="bg-secondary text-white">
 			<div class="container">
 				<div class="row">
 
