adding third section to bschallenge

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		</section>
 
 		<!--adding thumbnail section-->
-		<section>
+		<section class="bg-light text-black py-5">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg"></div>
@@ -102,7 +102,19 @@
 				</div>
 			</div>
 		</section>
-
+		<!--adding third section-->
+			<section class="bg-light text black py-5">
+				<div class="row">
+					<div class="card" style="width: 18rem;">
+						<img class="card-img-top" src="..." alt="Card image cap">
+						<div class="card-body">
+							<h5 class="card-title">Card title</h5>
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							<a href="#" class="btn btn-primary">Go somewhere</a>
+						</div>
+					</div>
+				</div>
+			</section>
 		<!--adding footer sectionb-->
 		<footer class="bg-secondary text-white">
 			<div class="container">
