--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-12">
-						<img src="https://www.fillmurray.com/300/300" alt="fill murray" class="float-lg-left pr-lg-5">
+						<img src="https://www.fillmurray.com/300/300" alt="fill murray" class="block: margin: 0 auto,pr-lg-5">
 						<p>
 							Cred next level subway tile tattooed pitchfork retro skateboard. Cardigan pop-up crucifix prism. Shoreditch yr narwhal ethical polaroid health goth taxidermy prism sriracha ugh try-hard edison bulb meditation mixtape farm-to-table. Waistcoat before they sold out yr wolf lyft paleo skateboard locavore try-hard meh. Cred gentrify microdosing tilde ugh succulents chambray viral health goth williamsburg jianbing. Vexillologist biodiesel meh tousled iceland.
 						</p>
@@ -94,6 +94,10 @@
 		<section class="bg-light text-black py-5">
 			<div class="container">
 				<div class="row">
+					<img src="https://www.placecage.com/gif/200/200" class="block margin:0 auto" alt="place cage">
+					<img src="https://www.placecage.com/gif/200/200" class="rounded float-right" alt="place cage">
+					<img src="https://www.placecage.com/gif/200/200" class="rounded float-left" alt="place cage">
+					<img src="https://www.placecage.com/gif/200/200" class="rounded float-right" alt="place cage">
 					<div class="col-lg"></div>
 					<div class="col-lg"></div>
 					<div class="col-lg"></div>
@@ -102,23 +106,16 @@
 				</div>
 			</div>
 		</section>
-		<!--adding third section-->
-			<section class="bg-light text black py-5">
-				<div class="row">
-					<div class="card" style="width: 18rem;">
-						<img class="card-img-top" src="..." alt="Card image cap">
-						<div class="card-body">
-							<h5 class="card-title">Card title</h5>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-							<a href="#" class="btn btn-primary">Go somewhere</a>
-						</div>
-					</div>
-				</div>
-			</section>
+
 		<!--adding footer sectionb-->
 		<footer class="bg-secondary text-white">
 			<div class="container">
 				<div class="row">
+					<div class="card">
+						<div class="card-body">
+							<p class="card-text">Card text here...</p>
+						</div>
+					</div>
 
 				</div>
 			</div>
