--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+				integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 		<title>Hello, world!</title>
 	</head>
@@ -18,7 +19,9 @@
 					<div class="col">
 						<nav class="navbar navbar-expand-lg navbar-light bg-light">
 							<a class="navbar-brand" href="#">Navbar</a>
-							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+							<button class="navbar-toggler" type="button" data-toggle="collapse"
+									  data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+									  aria-expanded="false" aria-label="Toggle navigation">
 								<span class="navbar-toggler-icon"></span>
 							</button>
 
@@ -31,7 +34,8 @@
 										<a class="nav-link" href="#">Link</a>
 									</li>
 									<li class="nav-item dropdown">
-										<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+										<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+											data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 											Dropdown
 										</a>
 										<div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -64,9 +68,11 @@
 					<div class="col-12">
 						<div class="jumbotron">
 							<h1 class="display-4">Hello, world!</h1>
-							<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+							<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra
+								attention to featured content or information.</p>
 							<hr class="my-4">
-							<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+							<p>It uses utility classes for typography and spacing to space content out within the larger
+								container.</p>
 							<p class="lead">
 								<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
 							</p>
@@ -83,7 +89,11 @@
 					<div class="col-12">
 						<img src="https://www.fillmurray.com/300/300" alt="fill murray" class="block: margin: 0 auto,pr-lg-5">
 						<p>
-							Cred next level subway tile tattooed pitchfork retro skateboard. Cardigan pop-up crucifix prism. Shoreditch yr narwhal ethical polaroid health goth taxidermy prism sriracha ugh try-hard edison bulb meditation mixtape farm-to-table. Waistcoat before they sold out yr wolf lyft paleo skateboard locavore try-hard meh. Cred gentrify microdosing tilde ugh succulents chambray viral health goth williamsburg jianbing. Vexillologist biodiesel meh tousled iceland.
+							Cred next level subway tile tattooed pitchfork retro skateboard. Cardigan pop-up crucifix prism.
+							Shoreditch yr narwhal ethical polaroid health goth taxidermy prism sriracha ugh try-hard edison
+							bulb meditation mixtape farm-to-table. Waistcoat before they sold out yr wolf lyft paleo skateboard
+							locavore try-hard meh. Cred gentrify microdosing tilde ugh succulents chambray viral health goth
+							williamsburg jianbing. Vexillologist biodiesel meh tousled iceland.
 						</p>
 					</div>
 				</div>
@@ -91,20 +101,35 @@
 		</section>
 
 		<!--adding thumbnail section-->
-		<section class="bg-light text-black py-5">
-			<div class="container">
+		<section>
+			<div class="container-fluid px-5">
 				<div class="row">
-					<img src="https://www.placecage.com/gif/200/200" class="block margin:0 auto" alt="place cage">
-					<img src="https://www.placecage.com/gif/200/200" class="rounded float-right" alt="place cage">
-					<img src="https://www.placecage.com/gif/200/200" class="rounded float-left" alt="place cage">
-					<img src="https://www.placecage.com/gif/200/200" class="rounded float-right" alt="place cage">
-					<div class="col-lg"></div>
-					<div class="col-lg"></div>
-					<div class="col-lg"></div>
-					<div class="col-lg"></div>
+					<div class="col-md-3">
+						<img src="https://www.placecage.com/gif/200/200">
+				<div class="card" style="width: 18rem;">
+				  <div class="card-body">
+				    <h5 class="card-title">Special title treatment</h5>
+				    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+				    <a href="#" class="btn btn-primary">Go somewhere</a>
+				  </div>
+				</div>
+		</section>
 
+<!--adding thumbnail section-->
+		<section>
+			<div class="container-fluid px-5>	</divclass>
+			<div class="row">
+				<div class="col-md-3">
+					<img src="https://www.placecage.com/gif/200/200">
+					<div class="card" style="width: 18rem">
+						<div class="card-body">
+							<h5 class="card-title">Special title treatment</h5>
+							<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+						</div    <a href="#" class="btn btn-primary">Go somewhere</a>
+					</div>
 				</div>
 			</div>
+
 		</section>
 
 		<!--adding footer sectionb-->
@@ -123,8 +148,14 @@
 
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+				  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+				  crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+				  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+				  crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+				  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+				  crossorigin="anonymous"></script>
 	</body>
 </html>
