adding other cards to 3rd section

--- a/index.html
+++ b/index.html
@@ -106,32 +106,69 @@
 				<div class="row">
 					<div class="col-md-3">
 						<img src="https://www.placecage.com/gif/200/200">
-				<div class="card" style="width: 18rem;">
-				  <div class="card-body">
-				    <h5 class="card-title">Special title treatment</h5>
-				    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-				    <a href="#" class="btn btn-primary">Go somewhere</a>
-				  </div>
-				</div>
-		</section>
-
-<!--adding thumbnail section-->
-		<section>
-			<div class="container-fluid px-5>	</divclass>
-			<div class="row">
-				<div class="col-md-3">
-					<img src="https://www.placecage.com/gif/200/200">
-					<div class="card" style="width: 18rem">
-						<div class="card-body">
-							<h5 class="card-title">Special title treatment</h5>
-							<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-						</div    <a href="#" class="btn btn-primary">Go somewhere</a>
+						<div class="card" style="width: 18rem;">
+							<div class="card-body">
+								<h5 class="card-title">Special title treatment</h5>
+								<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+								<a href="#" class="btn btn-primary">Go somewhere</a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-
+		</section>
+		<!--		adding thumbnail section-->
+		<section>
+			<div class="container-fluid px-5">
+				<div class="row">
+					<div class="col-md-3">
+						<img src="https://www.placecage.com/gif/200/200">
+						<div class="card" style="width: 18rem;">
+							<div class="card-body">
+								<h5 class="card-title">Special title treatment</h5>
+								<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+								<a href="#" class="btn-btn-primary">Go somewhere</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!--		adding thumbnail section-->
+		<section>
+			<div class="container-fluid px-5">
+				<div class="row">
+					<div class="col-md-3">
+						<img src="https://www.placecage.com/gif/200/200">
+						<div class="card" style="width: 18rem;">
+							<div class="card-body">
+								<h5 class="card-title">Special title treatment</h5>
+								<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+								<a href="#" class="btn-btn-primary">Go somewhere</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</section>
 
+		<!--		adding thumbnail section-->
+		<section>
+			<div class="container-fluid px-5">
+				<div class="row">
+					<div class="col-md-3">
+						<img src="https://www.placecage.com/gif/200/200">
+						<div class="card" style="width: 18rem;">
+							<div class="card-body">
+								<h5 class="card-title">Special title treatment</h5>
+								<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+								<a href="#" class="btn-btn-primary">Go somewhere</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		<!--adding footer sectionb-->
 		<footer class="bg-secondary text-white">
 			<div class="container">
