added circle to img, added buttons

--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 				<div class="row">
 					<div class="col-12">
 						<img src="https://www.fillmurray.com/300/300" alt="fill murray" class="block: margin: 0 auto,pr-lg-5">
-						<p>
-							Cred next level subway tile tattooed pitchfork retro skateboard. Cardigan pop-up crucifix prism.
+						<p>Cred next level subway tile tattooed pitchfork retro skateboard. Cardigan pop-up crucifix prism.
 							Shoreditch yr narwhal ethical polaroid health goth taxidermy prism sriracha ugh try-hard edison
 							bulb meditation mixtape farm-to-table. Waistcoat before they sold out yr wolf lyft paleo skateboard
 							locavore try-hard meh. Cred gentrify microdosing tilde ugh succulents chambray viral health goth
@@ -104,9 +103,9 @@
 		<section>
 			<div class="container-fluid px-5">
 				<div class="row">
-					<div class="col-md-3">
-						<img src="https://www.placecage.com/gif/200/200">
-						<div class="card" style="width: 18rem;">
+					<div class="col-sm-3 text-center">
+						<img src="https://www.placecage.com/gif/200/200" alt="cage" class="rounded-circle my-4 d-inline-block mx-auto w-50">
+						<div class="card bg-light mb-3 mx-auto" style="max-width: 18rem;">
 							<div class="card-body">
 								<h5 class="card-title">Special title treatment</h5>
 								<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -121,13 +120,13 @@
 		<section>
 			<div class="container-fluid px-5">
 				<div class="row">
-					<div class="col-md-3">
-						<img src="https://www.placecage.com/gif/200/200">
-						<div class="card" style="width: 18rem;">
+					<div class="col-sm-3 text-center">
+						<img src="https://www.placecage.com/gif/200/200" alt="cage" class="rounded-circle my-4 d-inline-block mx-auto w-50">
+						<div class="card bg-light mb-3 mx-auto" style="max-width: 18rem;">
 							<div class="card-body">
 								<h5 class="card-title">Special title treatment</h5>
 								<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-								<a href="#" class="btn-btn-primary">Go somewhere</a>
+								<a href="#" class="btn btn-primary">Go somewhere</a>
 							</div>
 						</div>
 					</div>
@@ -138,13 +137,13 @@
 		<section>
 			<div class="container-fluid px-5">
 				<div class="row">
-					<div class="col-md-3">
-						<img src="https://www.placecage.com/gif/200/200">
-						<div class="card" style="width: 18rem;">
+					<div class="col-sm-3 text-center">
+						<img src="https://www.placecage.com/gif/200/200" alt="cage" class="rounded-circle my-4 d-inline-block mx-auto w-50">
+						<div class="card bg-light mb-3 mx-auto" style="max-width: 18rem;">
 							<div class="card-body">
 								<h5 class="card-title">Special title treatment</h5>
 								<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-								<a href="#" class="btn-btn-primary">Go somewhere</a>
+								<a href="#" class="btn btn-primary">Go somewhere</a>
 							</div>
 						</div>
 					</div>
@@ -156,19 +155,20 @@
 		<section>
 			<div class="container-fluid px-5">
 				<div class="row">
-					<div class="col-md-3">
-						<img src="https://www.placecage.com/gif/200/200">
-						<div class="card" style="width: 18rem;">
+					<div class="col-sm-3 text-center">
+						<img src="https://www.placecage.com/gif/200/200" alt="cage" class="rounded-circle my-4 d-inline-block mx-auto w-50">
+						<div class="card bg-light mb-3 mx-auto" style="max-width: 18rem;">
 							<div class="card-body">
 								<h5 class="card-title">Special title treatment</h5>
 								<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-								<a href="#" class="btn-btn-primary">Go somewhere</a>
+								<a href="#" class="btn btn-primary">Go somewhere</a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
+
 		<!--adding footer sectionb-->
 		<footer class="bg-secondary text-white">
 			<div class="container">
