trying to center nick cage

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<!--adding content section-->
 		<section class="bg-secondary text-white py-5">
 			<div class="container">
-				<div class="row">
+				<div class="d-inline bg-success">
 					<div class="col-12">
 						<img src="https://www.fillmurray.com/300/300" alt="fill murray" class="block: margin: 0 auto,pr-lg-5">
 						<p>Cred next level subway tile tattooed pitchfork retro skateboard. Cardigan pop-up crucifix prism.
@@ -102,9 +102,9 @@
 		<!--adding thumbnail section-->
 		<section>
 			<div class="container-fluid px-5">
-				<div class="row">
+				<div class="d-inline bg-success">
 					<div class="col-sm-3 text-center">
-						<img src="https://www.placecage.com/gif/200/200" alt="cage" class="rounded-circle my-4 d-inline-block mx-auto w-50">
+						<img src="https://www.placecage.com/gif/200/200" alt="cage" class="rounded-circle my-4 d-inline mx-auto w-50">
 						<div class="card bg-light mb-3 mx-auto" style="max-width: 18rem;">
 							<div class="card-body">
 								<h5 class="card-title">Special title treatment</h5>
@@ -119,9 +119,9 @@
 		<!--		adding thumbnail section-->
 		<section>
 			<div class="container-fluid px-5">
-				<div class="row">
+				<div class="d-inline bg success">
 					<div class="col-sm-3 text-center">
-						<img src="https://www.placecage.com/gif/200/200" alt="cage" class="rounded-circle my-4 d-inline-block mx-auto w-50">
+						<img src="https://www.placecage.com/gif/200/200" alt="cage" class="rounded-circle my-4 d-inline mx-auto w-50">
 						<div class="card bg-light mb-3 mx-auto" style="max-width: 18rem;">
 							<div class="card-body">
 								<h5 class="card-title">Special title treatment</h5>
@@ -136,9 +136,9 @@
 		<!--		adding thumbnail section-->
 		<section>
 			<div class="container-fluid px-5">
-				<div class="row">
+				<div class="d-inline bg success">
 					<div class="col-sm-3 text-center">
-						<img src="https://www.placecage.com/gif/200/200" alt="cage" class="rounded-circle my-4 d-inline-block mx-auto w-50">
+						<img src="https://www.placecage.com/gif/200/200" alt="cage" class="rounded-circle my-4 d-inline mx-auto w-50">
 						<div class="card bg-light mb-3 mx-auto" style="max-width: 18rem;">
 							<div class="card-body">
 								<h5 class="card-title">Special title treatment</h5>
