--- a/index.html
+++ b/index.html
@@ -87,81 +87,52 @@
 			<div class="container">
 				<div class="d-inline bg-success">
 					<div class="col-12">
-						<img src="https://www.fillmurray.com/300/300" alt="fill murray" class="block: margin: 0 auto,pr-lg-5">
+						<img src="https://www.fillmurray.com/300/300" alt="fill murray" class="float-lg-left pr-lg-5">
 						<p>Cred next level subway tile tattooed pitchfork retro skateboard. Cardigan pop-up crucifix prism.
 							Shoreditch yr narwhal ethical polaroid health goth taxidermy prism sriracha ugh try-hard edison
 							bulb meditation mixtape farm-to-table. Waistcoat before they sold out yr wolf lyft paleo skateboard
 							locavore try-hard meh. Cred gentrify microdosing tilde ugh succulents chambray viral health goth
 							williamsburg jianbing. Vexillologist biodiesel meh tousled iceland.
 						</p>
+						<div class="clearfix"></div>
 					</div>
 				</div>
 			</div>
 		</section>
 
 		<!--adding thumbnail section-->
-		<section>
-			<div class="container-fluid px-5">
-				<div class="d-inline bg-success">
-					<div class="col-sm-3 text-center">
-						<img src="https://www.placecage.com/gif/200/200" alt="cage" class="rounded-circle my-4 d-inline mx-auto w-50">
-						<div class="card bg-light mb-3 mx-auto" style="max-width: 18rem;">
-							<div class="card-body">
-								<h5 class="card-title">Special title treatment</h5>
-								<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-								<a href="#" class="btn btn-primary">Go somewhere</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!--		adding thumbnail section-->
-		<section>
-			<div class="container-fluid px-5">
-				<div class="d-inline bg success">
-					<div class="col-sm-3 text-center">
-						<img src="https://www.placecage.com/gif/200/200" alt="cage" class="rounded-circle my-4 d-inline mx-auto w-50">
-						<div class="card bg-light mb-3 mx-auto" style="max-width: 18rem;">
-							<div class="card-body">
-								<h5 class="card-title">Special title treatment</h5>
-								<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-								<a href="#" class="btn btn-primary">Go somewhere</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!--		adding thumbnail section-->
-		<section>
-			<div class="container-fluid px-5">
-				<div class="d-inline bg success">
-					<div class="col-sm-3 text-center">
-						<img src="https://www.placecage.com/gif/200/200" alt="cage" class="rounded-circle my-4 d-inline mx-auto w-50">
-						<div class="card bg-light mb-3 mx-auto" style="max-width: 18rem;">
-							<div class="card-body">
-								<h5 class="card-title">Special title treatment</h5>
-								<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-								<a href="#" class="btn btn-primary">Go somewhere</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<!--		adding thumbnail section-->
-		<section>
-			<div class="container-fluid px-5">
+		<section class="py-5">
+			<div class="container">
 				<div class="row">
-					<div class="col-sm-3 text-center">
-						<img src="https://www.placecage.com/gif/200/200" alt="cage" class="rounded-circle my-4 d-inline-block mx-auto w-50">
-						<div class="card bg-light mb-3 mx-auto" style="max-width: 18rem;">
+					<div class="col-lg">
+						<img src="https://www.fillmurray.com/150/150" alt="fillmurray" class="mx-auto d-block mb-3 rounded-circle">
+						<div class="card">
 							<div class="card-body">
-								<h5 class="card-title">Special title treatment</h5>
-								<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-								<a href="#" class="btn btn-primary">Go somewhere</a>
+								<p class="card-text">Card text here...</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg">
+						<img src="https://www.fillmurray.com/150/150" alt="fillmurray" class="mx-auto d-block mb-3 rounded-circle">
+						<div class="card">
+							<div class="card-body">
+								<p class="card-text">Card text here...</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg">
+						<img src="https://www.fillmurray.com/150/150" alt="fillmurray" class="mx-auto d-block mb-3 rounded-circle">
+						<div class="card">
+							<div class="card-body">
+								<p class="card-text">Card text here...</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg">
+						<img src="https://www.fillmurray.com/150/150" alt="fillmurray" class="mx-auto d-block mb-3 rounded-circle">
+						<div class="card">
+							<div class="card-body">
+								<p class="card-text">Card text here...</p>
 							</div>
 						</div>
 					</div>
